updated cmake configuration and readme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,6 @@ include_directories(${SQLITE3_INCLUDE_DIR})
 
 # Link the executable
 target_link_libraries(muttvcardsearch ${CURL_LIBRARY} ${SQLITE3_LIBRARIES})
+
+install (TARGETS muttvcardsearch DESTINATION "/usr/bin")
+
